[project]
name = "mltimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.16",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.29",
    "lxml>=6.0.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "unstructured[all-docs]>=0.18.11",
]
